<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="space.schnieder.fuelcalc.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="24dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/remain_fuel"
                android:textColor="#000000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/remaining_fuel"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="@string/Fuel"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                android:textSize="24sp"
                android:windowSoftInputMode="stateVisible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/lbs"
                android:textColor="#000000"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="24dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/ramp_fuel"
                android:textColor="#000000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/ramp_fuel"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:hint="@string/Fuel"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/lbs"
                android:textColor="#000000"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="32dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/uplift"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/uplift"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:hint="@string/Fuel"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/lbs"
                android:textColor="#000000"
                android:textSize="24sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="32dp">


            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/calc_liters"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/calc_liters"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:hint="@string/Fuel"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/ltr"
                android:textColor="#000000"
                android:textSize="24sp" />

        </LinearLayout>

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calculate"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:onClick="calculateFuel"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
